[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/explosion.png" type="Texture" id=1]
[ext_resource path="res://objects/board/Explosion.gd" type="Script" id=2]

[node name="Explosion" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite_North" type="Sprite" parent="." groups=[
"fire",
]]
visible = false
position = Vector2( 8, 8 )
rotation = 4.71239
z_index = 30
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, -8 )
hframes = 11

[node name="Sprite_South" type="Sprite" parent="." groups=[
"fire",
]]
visible = false
position = Vector2( 8, 8 )
rotation = 1.5708
z_index = 30
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, -8 )
hframes = 11

[node name="Sprite_West" type="Sprite" parent="." groups=[
"fire",
]]
visible = false
position = Vector2( 8, 8 )
rotation = 3.14159
z_index = 30
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, -8 )
hframes = 11

[node name="Sprite_East" type="Sprite" parent="." groups=[
"fire",
]]
visible = false
position = Vector2( 8, 8 )
z_index = 30
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, -8 )
hframes = 11
